--- a/appsettings.json
+++ b/appsettings.json
@@ -7,14 +7,41 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=creditodb;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=creditodb;Username=postgres;Password=postgres",
+    "Redis": "localhost:6379"
   },
   "ServiceBus": {
     "ConnectionString": "Endpoint=sb://your-namespace.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=your-key",
     "TopicName": "integrar-credito-constituido-entry",
-    "SubscriptionName": "credito-processor"
+    "SubscriptionName": "credito-processor",
+    "AuditTopicName": "consulta-credito-log"
   },
   "BackgroundService": {
     "ProcessingIntervalMs": 500
+  },
+  "JwtSettings": {
+    "Secret": "your-super-secret-key-min-32-characters-long-for-security",
+    "Issuer": "CreditoAPI",
+    "Audience": "CreditoAPIClients",
+    "ExpirationInMinutes": 60
+  },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 60
+      },
+      {
+        "Endpoint": "*",
+        "Period": "1h",
+        "Limit": 1000
+      }
+    ]
   }
 }
